--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@types/react-router": "^4.4.3",
+    "apollo-boost": "^0.1.27",
+    "autobind-decorator": "^2.4.0",
     "autoprefixer": "7.1.6",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
@@ -17,6 +19,8 @@
     "file-loader": "1.1.5",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "3.0.1",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -29,12 +33,14 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.7.0",
+    "react-apollo": "^2.3.3",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
+    "styled-components": "^4.1.3",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "22.0.1",
     "ts-loader": "^2.3.7",
@@ -55,11 +61,15 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.5",
     "@types/history": "^4.7.2",
     "@types/jest": "^23.3.12",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/styled-components": "^4.1.6",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "typescript": "^3.2.2"
   },
   "jest": {
